--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+application.name=Ofertas 2.0
+datasource.url=jdbc:derby:db/blsdb;create=true
+datasource.username=admin
+datasource.password=password
+datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
 
+ww.shopcarsnow.com/images/no-image-available-car-16-9.svg
+
+logging.level.org.springframework=ERROR 
+logging.level.com.gm.gsmc.shoppingtools=INFO 
