--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-application.name=Ofertas 2.0
-datasource.url=jdbc:derby:db/blsdb;create=true
-datasource.username=admin
-datasource.password=password
-datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
+application.name=BLS-Demo
+datasource.url=jdbc:postgresql://localhost:5432/bls_data
+datasource.username=postgres
+datasource.password=mypasswordsecret
+datasource.driver-class-name=org.postgresql.Driver
 
-ww.shopcarsnow.com/images/no-image-available-car-16-9.svg
-
-logging.level.org.springframework=ERROR 
-logging.level.com.gm.gsmc.shoppingtools=INFO 
+logging.level.org.springframework=ERROR
+logging.level.com.fshtank.bls=DEBUG
+logging.level.web=DEBUG
